[TicketController] Fix redirect url [ReserveView] Fix an error that make links are not clickable on mobile device.

--- a/MovieTicketReservation/Content/ticket.css
+++ b/MovieTicketReservation/Content/ticket.css
@@ -40,5 +40,7 @@
 }
 
 .options {
+    padding-top: 10px;
     text-align: center;
+    overflow: hidden
 }
